fixes until we find a solution for the overflow scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
 html,
 body {
   font-family: var(--font-outfit), 'Outfit';
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* .footer-gradient {
